--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -1,7 +1,39 @@
 ---
+import { Image } from "astro:assets";
 import Base from "../layouts/Base.astro";
+import { portfolioEntries } from "../lib/getContent";
 ---
 
 <Base>
-  <main class="base-main"></main>
+  <main class="base-main">
+    <div class="portfolio-entries relative mb-4">
+      {
+        portfolioEntries.map((entry) => {
+          const image = entry.props.portfolioPageDisplayImage;
+          if (!image) return;
+          
+          return (
+            <a class="absolute" href={`portfolio/${entry.props.slug}`}>
+              <Image
+                class="m-0"
+                src={image.fields.file!.url}
+                alt={image.fields.title}
+                width={image.fields.file!.details.image!.width}
+                height={image.fields.file!.details.image!.height}
+              />
+            </a>
+          );
+        })
+      }
+    </div>
+    <!-- add padding after last item -->
+    <div class="h-8"></div>
+  </main>
 </Base>
+
+<script>
+  import MiniMasonry from "minimasonry";
+  const masonry = new MiniMasonry({
+    container: ".portfolio-entries",
+  });
+</script>
