change colors for better accessibility and readability

--- a/src/pages/portfolio/[slug].astro
+++ b/src/pages/portfolio/[slug].astro
@@ -40,7 +40,7 @@ const { title, description, type } = Astro.props;
     >
       <h2
         set:html={title}
-        class="color-[#FF7DB8] mt-auto pb-12 text-4xl font-bold lg:text-6xl"
+        class="color-[#F84FB7] mt-auto pb-12 text-4xl font-bold lg:text-6xl"
       />
       <p
         set:html={description}
