--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -43,7 +43,7 @@ function standardizeServiceSection(service: (typeof servicesPage.sections)[0]) {
 
     <div
       id="sidebar"
-      class="bg-#3DBFAF h-100vh sticky top-0 hidden w-full flex-col lg:col-start-1 lg:col-end-8 lg:row-start-1 lg:flex"
+      class="bg-#2FA496 h-100vh sticky top-0 hidden w-full flex-col lg:col-start-1 lg:col-end-8 lg:row-start-1 lg:flex"
     >
       <div class="pt-42"></div>
       <a
