--- a/src/components/portfolio/PDF.astro
+++ b/src/components/portfolio/PDF.astro
@@ -11,7 +11,7 @@ const { pdf } = Astro.props;
     width="100%"
     height="100%"></iframe>
   <a
-    class="rounded border-4 border-blue-600 bg-blue-600 px-4 py-2 text-center text-white hover:bg-blue-700"
+    class="rounded font-bold bg-#F84FB7 px-4 py-2 text-center text-white hover:bg-#f972c5"
     href={"https:" + pdf.fields.file!.url}
     target="_blank"
     rel="noopener noreferrer">View Full PDF in New Tab</a
