--- a/src/components/portfolio/Carousels.astro
+++ b/src/components/portfolio/Carousels.astro
@@ -29,9 +29,9 @@ const { firstCarousel, secondCarousel, thirdCarousel, fourthCarousel } =
             </div>
           </div>
 
-          <div class="flex justify-center items-center mt-4 flex-gap-2 md:flex-gap-4">
+          <div class="flex-gap-2 md:flex-gap-4 mt-4 flex items-center justify-center">
             <button class="blaze-prev">prev</button>
-            <div class="blaze-pagination flex flex-gap-4" />
+            <div class="blaze-pagination flex-gap-4 flex" />
             <button class="blaze-next">next</button>
           </div>
         </div>
@@ -123,7 +123,7 @@ const { firstCarousel, secondCarousel, thirdCarousel, fourthCarousel } =
     background: var(--h);
     cursor: pointer;
     transition: transform 200ms ease, background-color 300ms ease;
-    @apply w-3 h-3 md:w-4 md:h-4;
+    @apply h-3 w-3 md:h-4 md:w-4;
   }
 
   .blaze-pagination button.active {
