--- a/src/components/portfolio/StaticImages.astro
+++ b/src/components/portfolio/StaticImages.astro
@@ -9,7 +9,7 @@ const { images } = Astro.props;
   images.map((image) => (
     <Image
       class="pb-4"
-      src={image.fields.file!.url}
+      src={image.fields.file!.url + "?fm=webp&q=90&w=800"}
       alt={image.fields.title}
       width={image.fields.file!.details.image!.width}
       height={image.fields.file!.details.image!.height}
