--- a/src/components/portfolio/Carousels.astro
+++ b/src/components/portfolio/Carousels.astro
@@ -19,7 +19,7 @@ const { firstCarousel, secondCarousel, thirdCarousel, fourthCarousel } =
               <div class="blaze-track">
                 {carousel.map((slide) => (
                   <Image
-                    src={slide.fields.file!.url}
+                    src={slide.fields.file!.url + "?fm=webp&q=90&w=800"}
                     alt={slide.fields.description}
                     width={slide.fields.file!.details.image!.width}
                     height={slide.fields.file!.details.image!.height}
