--- a/src/components/portfolio/Carousels.astro
+++ b/src/components/portfolio/Carousels.astro
@@ -1,6 +1,6 @@
 ---
-import { Image } from "astro:assets";
 import type { PortfolioEntryCarousels } from "../../lib/getContent";
+import Carousel from "../Carousel.astro";
 type Props = Pick<
   PortfolioEntryCarousels["props"],
   "firstCarousel" | "secondCarousel" | "thirdCarousel" | "fourthCarousel"
@@ -11,158 +11,6 @@ const { firstCarousel, secondCarousel, thirdCarousel, fourthCarousel } =
 
 {
   [firstCarousel, secondCarousel, thirdCarousel, fourthCarousel].map(
-    (carousel) =>
-      carousel && (
-        <div class="blaze-slider pb-24">
-          <div class="blaze-container">
-            <div class="blaze-track-container">
-              <div class="blaze-track">
-                {carousel.map((slide) => (
-                  <Image
-                    src={slide.fields.file!.url + "?fm=webp&q=90&w=800"}
-                    alt={slide.fields.description}
-                    width={slide.fields.file!.details.image!.width}
-                    height={slide.fields.file!.details.image!.height}
-                  />
-                ))}
-              </div>
-            </div>
-          </div>
-
-          <div class="flex-gap-2 md:flex-gap-4 mt-4 flex items-center justify-center">
-            <button class="blaze-prev">prev</button>
-            <div class="blaze-pagination flex-gap-4 flex" />
-            <button class="blaze-next">next</button>
-          </div>
-        </div>
-      ),
+    (carousel) => carousel && <Carousel images={carousel} />
   )
 }
-
-<style>
-  html {
-    --c1: #141414;
-    --c2: #1e1e1e;
-    --c3: #282828;
-    --c4: #505050;
-    --h: #f84fb7;
-  }
-
-  .blaze-slider.dragging .blaze-track {
-    cursor: grabbing;
-  }
-
-  .blaze-track > * {
-    min-height: 300px;
-    display: flex;
-    font-size: 30px;
-    justify-content: center;
-    align-items: center;
-    font-family:
-      system-ui,
-      -apple-system,
-      "Segoe UI",
-      Roboto,
-      Ubuntu,
-      Cantarell,
-      "Noto Sans",
-      sans-serif;
-    background: var(--c2);
-    color: white;
-    border: 2px solid var(--c4);
-    border-radius: 8px;
-  }
-
-  .blaze-next,
-  .blaze-prev {
-    border: none;
-    font-size: 0;
-    width: 20px;
-    height: 20px;
-    background: none;
-    cursor: pointer;
-    background-position: center;
-    background-size: 100%;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='24' viewBox='0 0 24 24' width='24'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath fill='%23f84fb7' d='M11.67 3.87L9.9 2.1 0 12l9.9 9.9 1.77-1.77L3.54 12z'/%3E%3C/svg%3E");
-  }
-
-  .blaze-next {
-    transform: rotate(180deg);
-  }
-
-  /* for loop: false */
-  .blaze-slider.start .blaze-prev,
-  .blaze-slider.end .blaze-next {
-    opacity: 0.5;
-    cursor: not-allowed;
-  }
-
-  /* fix layout shifts */
-
-  .blaze-slider {
-    --slides-to-show: 1;
-  }
-
-  @media (min-width: 768px) {
-    .blaze-slider {
-      --slides-to-show: 2;
-    }
-  }
-
-  @media (min-width: 1024px) {
-    .blaze-slider {
-      --slides-to-show: 3;
-    }
-  }
-</style>
-
-<style is:global>
-  /*
-    needs to be global scoped because these elements don't exist on page render
-    Astro strips this specific styling from the bundle through minification
-    (I think)
-  */
-  .blaze-pagination button {
-    font-size: 0;
-    border-radius: 50%;
-    outline: none;
-    border: none;
-    background: var(--h);
-    cursor: pointer;
-    transition:
-      transform 200ms ease,
-      background-color 300ms ease;
-    @apply h-3 w-3 md:h-4 md:w-4;
-  }
-
-  .blaze-pagination button.active {
-    background: var(--h);
-    transform: scale(1.3);
-  }
-</style>
-
-<script>
-  import BlazeSlider from "blaze-slider";
-  import "blaze-slider/dist/blaze.css";
-  const sliders = document.querySelectorAll(
-    ".blaze-slider",
-  ) as unknown as Array<HTMLElement>;
-  sliders.forEach(
-    (slider) =>
-      new BlazeSlider(slider, {
-        all: {
-          slidesToScroll: 1,
-          slidesToShow: 1,
-          enableAutoplay: true,
-          autoplayInterval: 4000,
-          stopAutoplayOnInteraction: true,
-        },
-        "(min-width: 768px)": {
-          slidesToShow: 2,
-        },
-        "(min-width: 1024px)": {
-          slidesToShow: 3,
-        },
-      }),
-  );
-</script>
