create new Carousel component, format

--- a/src/components/portfolio/Carousels.astro
+++ b/src/components/portfolio/Carousels.astro
@@ -11,6 +11,6 @@ const { firstCarousel, secondCarousel, thirdCarousel, fourthCarousel } =
 
 {
   [firstCarousel, secondCarousel, thirdCarousel, fourthCarousel].map(
-    (carousel) => carousel && <Carousel images={carousel} />
+    (carousel) => carousel && <Carousel images={carousel} />,
   )
 }
