fix all type errors

--- a/src/pages/portfolio/[slug].astro
+++ b/src/pages/portfolio/[slug].astro
@@ -1,5 +1,6 @@
 ---
-import { portfolioEntries, PortfolioEntry } from "../../lib/getContent";
+import { portfolioEntries } from "../../lib/getContent";
+import type { PortfolioEntry } from "../../lib/getContent";
 import Base from "../../layouts/Base.astro";
 import Carousels from "../../components/portfolio/Carousels.astro";
 import PDF from "../../components/portfolio/PDF.astro";
