--- a/src/components/portfolio/StaticImages.astro
+++ b/src/components/portfolio/StaticImages.astro
@@ -10,7 +10,7 @@ const { images } = Astro.props;
     <Image
       class="pb-4"
       src={image.fields.file!.url + "?fm=webp&q=90&w=800"}
-      alt={image.fields.title}
+      alt={image.fields.title as string | null}
       width={image.fields.file!.details.image!.width}
       height={image.fields.file!.details.image!.height}
     />
