--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -17,7 +17,7 @@ import { portfolioEntries } from "../lib/getContent";
               <Image
                 class="m-0"
                 src={image.fields.file!.url + "?fm=webp&q=90&w=300"}
-                alt={image.fields.title}
+                alt={image.fields.title as string | null}
                 width={image.fields.file!.details.image!.width}
                 height={image.fields.file!.details.image!.height}
               />
@@ -33,7 +33,7 @@ import { portfolioEntries } from "../lib/getContent";
 
 <script>
   import MiniMasonry from "minimasonry";
-  const masonry = new MiniMasonry({
+  new MiniMasonry({
     container: ".portfolio-entries",
   });
 </script>
