contact page touches with Brielle

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,7 +3,7 @@ import Base from "../layouts/Base.astro";
 ---
 
 <Base>
-  <main class="base-main">
+  <main class="base-main mt-4 md:mt-0 pb-12">
     <section class="bg-white">
       <div class="font-base container mx-auto px-6 py-4 xl:px-24">
         <div class="flex flex-col-reverse lg:-mx-6 lg:flex-row lg:items-center">
