--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,9 @@ import Logo from "../assets/about-logo.png";
 ---
 
 <Base>
-  <main class="base-main mt-8 md:mt-0 xl:pl-1/5 grid px-10 lg:grid-cols-3 lg:pl-28 lg:pr-0">
+  <main
+    class="base-main mt-8 md:mt-0 xl:pl-1/5 grid px-10 lg:grid-cols-3 lg:pl-28 lg:pr-0"
+  >
     <article
       class="font-base lg:mt-18 text-gray-700 lg:col-start-1 lg:col-end-2 lg:row-start-1 lg:mb-20"
     >
