--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -119,7 +119,7 @@ import Base from "../layouts/Base.astro";
 
 <script is:inline>
   const contactFormErrorsElement = document.querySelector(
-    "#contact-form-errors"
+    "#contact-form-errors",
   );
 
   // Function is called through Turnstile onload callback
