--- a/src/components/portfolio/PDF.astro
+++ b/src/components/portfolio/PDF.astro
@@ -4,7 +4,7 @@ type Props = Pick<PortfolioEntryPDF["props"], "pdf">;
 const { pdf } = Astro.props;
 ---
 
-<div class="flex-gap-4 flex h-full w-full flex-col pb-4">
+<div class="flex-gap-4 flex h-full w-full flex-col pb-4 px-28">
   <iframe
     class="flex-grow"
     src={pdf.fields.file!.url}
