--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -88,7 +88,7 @@ import Base from "../layouts/Base.astro";
             <div class="mt-6 space-y-8 md:mt-8">
               <p class="-mx-2 flex items-start">
                 <span class="mx-2 w-72 truncate text-gray-700"
-                  >gabrielle.a.french@gmail.com</span
+                  >hello@briellefrench.com</span
                 >
               </p>
             </div>
