--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -13,7 +13,7 @@ import { portfolioEntries } from "../lib/getContent";
           if (!image) return;
 
           return (
-            <a class="absolute" href={`portfolio/${entry.props.slug}`}>
+            <a class="absolute" href={`/portfolio/${entry.props.slug}`}>
               <Image
                 class="m-0 my-8 lg:my-0"
                 src={image.fields.file!.url + "?fm=webp&q=75"}
