--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,6 @@
 ---
 import Base from "../layouts/Base.astro";
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 
 const socialLinks = [
   {
