--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -139,6 +139,11 @@ const socialLinks = [
     .contact-form-input textarea {
       @apply mt-2 block w-full rounded-md border border-gray-200 bg-white px-5 py-3 text-gray-700 placeholder-gray-400 focus:border-[#ff8abf] focus:outline-none focus:ring focus:ring-[#ff8abf] focus:ring-opacity-40;
     }
+
+    /* adds higher specificity to override unocss reset, which makes background transparent  */
+    #form-submit {
+      @apply bg-[#FF7DB8] hover:bg-[#b35881];
+    }
   </style>
 </Base>
 
@@ -237,7 +242,7 @@ const socialLinks = [
 
       if (submitFormRequest === "error") {
         contactFormErrorsElement.innerHTML =
-          "There was an error submitting your form. Please try again or email me directly with the email above.";
+          "There was an error submitting your form. Please try again or email me directly.";
         contactFormErrorsElement.classList.remove("hidden");
         contactFormErrorsElement.classList.add("block");
         contactFormSuccessElement.classList.remove("block");
@@ -247,19 +252,3 @@ const socialLinks = [
       }
     });
 </script>
-
-<style>
-  .contact-form-input label {
-    @apply mb-2 block text-sm text-gray-600;
-  }
-
-  .contact-form-input input,
-  .contact-form-input textarea {
-    @apply mt-2 block w-full rounded-md border border-gray-200 bg-white px-5 py-3 text-gray-700 placeholder-gray-400 focus:border-[#ff8abf] focus:outline-none focus:ring focus:ring-[#ff8abf] focus:ring-opacity-40;
-  }
-
-  /* adds higher specificity to override unocss reset, which makes background transparent  */
-  #form-submit {
-    @apply bg-[#FF7DB8] hover:bg-[#b35881];
-  }
-</style>
