add all seo titles and descriptions

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -10,7 +10,7 @@ const { title, description } = Astro.props;
   <head>
     <SEO
       title={title}
-      titleTemplate="%s - Brielle French Design"
+      titleTemplate="%s | Brielle French Design"
       titleDefault="Brielle French Design"
       description={description}
     />
