--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import Headshot from "../assets/about-headshot.png";
 import Logo from "../assets/about-logo.png";
 ---
 
-<Base>
+<Base title="About" description={aboutPage.seoDescription}>
   <main
     class="base-main mt-8 md:mt-0 xl:pl-1/5 grid px-10 lg:grid-cols-3 lg:pl-28 lg:pr-0"
   >
