--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -22,7 +22,7 @@ function standardizeServiceSection(service: (typeof servicesPage.sections)[0]) {
 }
 ---
 
-<Base>
+<Base title="Services" description={servicesPage.seoDescription}>
   <main class="base-main lg:bg-#F2F2F2 lg:grid-cols-20 lg:grid">
     <div
       id="select-container"
