--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,7 @@
 ---
 import Base from "../layouts/Base.astro";
 import { Icon } from "astro-icon/components";
+import { contactPage } from "../lib/getContent"
 
 const socialLinks = [
   {
@@ -31,7 +32,7 @@ const socialLinks = [
   src="https://challenges.cloudflare.com/turnstile/v0/api.js?onload=initTurnstile"
   defer></script>
 
-<Base>
+<Base title="Contact" description={contactPage.seoDescription}>
   <main class="base-main mt-4 md:mt-0 pb-12">
     <section class="bg-white">
       <div class="font-base container mx-auto px-6 py-4 xl:px-24">
