--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -3,6 +3,7 @@ import "../styles/index.css";
 import { SEO } from "astro-seo";
 import Nav from "../components/Nav.astro";
 import Footer from "../components/Footer.astro";
+import Logo from "../../public/logo.jpg";
 const { title, description } = Astro.props;
 
 interface Props {
@@ -18,10 +19,11 @@ interface Props {
       titleTemplate="%s | Brielle French Design"
       titleDefault="Brielle French Design"
       description={description}
+      canonical={"https://briellefrench.com" + Astro.url.pathname}
       openGraph={{
         basic: {
           title: title || "Brielle French Design",
-          image: "https://ef17-71-211-137-83.ngrok-free.app/logo.jpg",
+          image: Logo.src,
           type: "website",
           url: "https://briellefrench.com",
         },
@@ -39,15 +41,17 @@ interface Props {
         card: "summary",
         title: title || "Brielle French Design",
         description: description,
-        image: "https://ef17-71-211-137-83.ngrok-free.app/logo.jpg",
+        image: Logo.src,
         imageAlt: "Brielle French Design's logo",
       }}
       extend={{
-        // meta: [{
-        //   name: "image",
-        //   property: "og:image",
-        //   content: "https://ef17-71-211-137-83.ngrok-free.app/logo.jpg"
-        // }]
+        meta: [
+          {
+            name: "image",
+            property: "og:image",
+            content: Logo.src,
+          },
+        ],
       }}
     />
     <meta charset="utf-8" />
